--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -4,7 +4,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:layout_margin="@dimen/overall_margin">
+              android:layout_marginTop="@dimen/overall_margin"
+              android:layout_marginBottom="@dimen/overall_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +20,7 @@
             android:layout_height="@dimen/item_height"
             android:text="@string/short_name"
             android:textAlignment="center"
-            android:layout_weight="8"
+            android:layout_weight="10"
             android:textColor="@android:color/black"
             android:textSize="@dimen/textsize_big"/>
 
@@ -30,7 +31,7 @@
             android:layout_height="@dimen/item_height"
             app:srcCompat="@drawable/kmwicon"
             android:scaleType="fitCenter"
-            android:layout_weight="1"/>
+            android:layout_weight="2"/>
 
         <ImageView
             android:id="@+id/pl_label"
@@ -38,7 +39,7 @@
             android:layout_height="@dimen/item_height"
             app:srcCompat="@drawable/plicon"
             android:scaleType="fitCenter"
-            android:layout_weight="1"/>
+            android:layout_weight="2"/>
 
         <ImageView
             android:id="@+id/fl_label"
@@ -46,7 +47,7 @@
             android:layout_height="@dimen/item_height"
             app:srcCompat="@drawable/flicon"
             android:scaleType="fitCenter"
-            android:layout_weight="1"/>
+            android:layout_weight="2"/>
 
         <ImageView
             android:id="@+id/tw_label"
@@ -54,7 +55,7 @@
             android:layout_height="@dimen/item_height"
             app:srcCompat="@drawable/twicon"
             android:scaleType="fitCenter"
-            android:layout_weight="1"/>
+            android:layout_weight="2"/>
 
         <ImageView
             android:id="@+id/hw_label"
@@ -62,7 +63,19 @@
             android:layout_height="@dimen/item_height"
             app:srcCompat="@drawable/hwicon"
             android:scaleType="fitCenter"
-            android:layout_weight="1"/>
+            android:layout_weight="2"/>
+
+        <TextView
+            android:id="@+id/spaceText"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/item_height"
+            android:textSize="@dimen/textsize_medium"
+            android:layout_weight="1"
+            android:textColor="@android:color/holo_blue_dark"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:background="#40ffffff"
+            android:text=" "/>
 
     </LinearLayout>
 
