--- a/app/src/main/res/layout/list_products_item.xml
+++ b/app/src/main/res/layout/list_products_item.xml
@@ -4,13 +4,14 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_margin="@dimen/overall_margin">
+              android:layout_marginTop="@dimen/overall_margin"
+              android:layout_marginBottom="@dimen/overall_margin">
 
     <TextView
         android:id="@+id/shortName"
         android:layout_width="0dp"
         android:layout_height="@dimen/item_height"
-        android:layout_weight="8"
+        android:layout_weight="10"
         android:textColor="@android:color/black"
         android:textSize="@dimen/textsize_medium"
         tools:text="SWS Children's Ultivite 120 tabs"/>
@@ -20,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/item_height"
         android:textAlignment="center"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:textSize="@dimen/textsize_medium"
         tools:text="100"
         android:textColor="@android:color/black"/>
@@ -29,18 +30,18 @@
         android:id="@+id/pl_price"
         android:layout_width="0dp"
         android:layout_height="@dimen/item_height"
+        android:layout_weight="2"
         android:textAlignment="center"
-        android:layout_weight="1"
+        android:textColor="@android:color/black"
         android:textSize="@dimen/textsize_medium"
-        tools:text="100"
-        android:textColor="@android:color/black"/>
+        tools:text="100"/>
 
     <TextView
         android:id="@+id/fl_price"
         android:layout_width="0dp"
         android:layout_height="@dimen/item_height"
         android:textAlignment="center"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:textSize="@dimen/textsize_medium"
         tools:text="100"
         android:textColor="@android:color/black"/>
@@ -50,7 +51,7 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/item_height"
         android:textAlignment="center"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:textSize="@dimen/textsize_medium"
         tools:text="100"
         android:textColor="@android:color/black"/>
@@ -60,9 +61,21 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/item_height"
         android:textAlignment="center"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:textSize="@dimen/textsize_medium"
         tools:text="100"
         android:textColor="@android:color/black"/>
+
+    <TextView
+        android:id="@+id/addText"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/item_height"
+        android:textSize="@dimen/textsize_medium"
+        android:layout_weight="1"
+        android:textColor="@android:color/holo_blue_dark"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:background="#40ffffff"
+        android:text="+"/>
 
 </LinearLayout>
