--- a/app/src/main/res/layout-land/fragment_product_detail.xml
+++ b/app/src/main/res/layout-land/fragment_product_detail.xml
@@ -24,7 +24,8 @@
         android:layout_height="0dp"
         android:orientation="horizontal"
         android:layout_weight="6"
-        android:layout_margin="@dimen/overall_margin">
+        android:layout_margin="@dimen/overall_margin"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="0dp"
