--- a/app/src/main/res/layout/best_choices_item.xml
+++ b/app/src/main/res/layout/best_choices_item.xml
@@ -29,7 +29,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:layout_width="0dp"
