--- a/app/src/main/res/layout/activity_products_.xml
+++ b/app/src/main/res/layout/activity_products_.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/products_placeholder"
-    tools:context="com.example.ryan.wheretobuy.ui.ProductsActivity">
+    tools:context="com.mainframevampire.ryan.wheretobuy.ui.ProductsActivity">
 
 </android.support.constraint.ConstraintLayout>
