--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="overall_margin">10dp</dimen>
     <dimen name="textsize_small">20sp</dimen>
+    <dimen name="textsize_middlle">24sp</dimen>
     <dimen name="textsize_medium">28sp</dimen>
     <dimen name="textsize_big">32sp</dimen>
     <dimen name="textsize_large">40sp</dimen>
