--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="overall_margin">5dp</dimen>
     <dimen name="textsize_small">10sp</dimen>
+    <dimen name="textsize_middlle">12sp</dimen>
     <dimen name="textsize_medium">14sp</dimen>
     <dimen name="textsize_big">16sp</dimen>
     <dimen name="textsize_large">20sp</dimen>
