--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -28,6 +28,15 @@
         android:layout_weight="6"
         android:layout_margin="@dimen/overall_margin"/>
 
+    <CheckBox
+        android:id="@+id/favouriteCheckBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="is your favourite?"
+        android:layout_margin="@dimen/overall_margin"
+        android:textColor="@android:color/black"
+        android:textSize="@dimen/textsize_big"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
