--- a/app/src/main/res/layout/list_products_item.xml
+++ b/app/src/main/res/layout/list_products_item.xml
@@ -66,16 +66,11 @@
         tools:text="100"
         android:textColor="@android:color/black"/>
 
-    <TextView
-        android:id="@+id/addText"
+    <ImageView
+        android:id="@+id/favoriteImage"
         android:layout_width="0dp"
         android:layout_height="@dimen/item_height"
-        android:textSize="@dimen/textsize_medium"
         android:layout_weight="1"
-        android:textColor="@android:color/holo_blue_dark"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:background="#40ffffff"
-        android:text="+"/>
+        android:src="@drawable/ic_favorite_heart"/>
 
 </LinearLayout>
