--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -19,5 +19,8 @@
     <item android:id="@+id/customise"
           android:title="My List"
           app:showAsAction="never"/>
+    <item android:id="@+id/share"
+          android:title="Share"
+          app:showAsAction="never"/>
 
 </menu>
