--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -6,8 +6,11 @@
     <dimen name="textsize_medium">28sp</dimen>
     <dimen name="textsize_big">32sp</dimen>
     <dimen name="textsize_large">40sp</dimen>
-    <dimen name="grid_width">240dp</dimen>
+    <dimen name="grid_width">300dp</dimen>
     <dimen name="item_width">40dp</dimen>
-    <dimen name="grid_height">200dp</dimen>
+    <dimen name="grid_height">240dp</dimen>
     <dimen name="item_height">40dp</dimen>
+    <dimen name="text_height">40dp</dimen>
+    <dimen name="button_margin">30dp</dimen>
+    <dimen name="button_height">60dp</dimen>
 </resources>
