--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".ui.MainActivity"
-    >
+      tools:context=".ui.MainActivity">
+
+    <item android:id="@+id/action_search"
+          android:title="Search"
+          android:icon="@android:drawable/ic_menu_search"
+          app:actionViewClass="android.support.v7.widget.SearchView"
+          app:showAsAction="ifRoom|collapseActionView" />
     <item android:id="@+id/swisse"
           android:title="Swisse"
           app:showAsAction="never"/>
@@ -22,7 +27,6 @@
     <item android:id="@+id/share"
           android:title="Share"
           app:showAsAction="never"/>
-
     <item android:id="@+id/post_facebook"
           android:title="Post on Facebook"
           app:showAsAction="never"
