--- a/app/src/main/res/layout/activity_results_search.xml
+++ b/app/src/main/res/layout/activity_results_search.xml
@@ -19,4 +19,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+
 </LinearLayout>
