--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,18 @@
         android:gravity="center"
         android:textColor="@android:color/black"/>
 
+    <TextView
+        android:id="@+id/recommended_header"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/header_height"
+        android:textSize="@dimen/textsize_medium"
+        android:textColor="@android:color/holo_blue_dark"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:background="#40ffffff"
+        android:text="You've reached the top"
+        android:visibility="gone"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
