--- a/app/src/main/res/layout/activity_results_search.xml
+++ b/app/src/main/res/layout/activity_results_search.xml
@@ -14,17 +14,21 @@
         android:visibility="gone"
         android:text="no results found"/>
 
+    <TextView
+        android:id="@+id/search_header"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/header_height"
+        android:textSize="@dimen/textsize_medium"
+        android:textColor="@android:color/holo_blue_dark"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:background="#40ffffff"
+        android:text="You've reached the top"
+        android:visibility="gone"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/searchRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
-    <ProgressBar
-        android:id="@+id/loadingProgressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
-
 
 </LinearLayout>
