--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -82,7 +82,7 @@
     <TextView
         android:id="@+id/products_header"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="@dimen/header_height"
         android:textSize="@dimen/textsize_medium"
         android:textColor="@android:color/holo_blue_dark"
         android:layout_gravity="center"
