--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="text_height">40dp</dimen>
     <dimen name="button_margin">30dp</dimen>
     <dimen name="button_height">60dp</dimen>
+    <dimen name="header_height">60dp</dimen>
 </resources>
