--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="text_height">30dp</dimen>
     <dimen name="button_margin">10dp</dimen>
     <dimen name="button_height">40dp</dimen>
+    <dimen name="header_height">30dp</dimen>
 </resources>
