--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,8 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/bestChoiceRecyclerView"
+            android:scrollbars="vertical"
+            android:fadeScrollbars="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
