--- a/app/src/main/res/layout/activity_results_search.xml
+++ b/app/src/main/res/layout/activity_results_search.xml
@@ -28,6 +28,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/searchRecyclerView"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
