--- a/app/src/main/res/layout/list_products_item.xml
+++ b/app/src/main/res/layout/list_products_item.xml
@@ -71,6 +71,7 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/item_height"
         android:layout_weight="1"
+        android:contentDescription="@string/favourite_icon"
         android:src="@drawable/ic_favorite_heart"/>
 
 </LinearLayout>
